reordered slides a bit

--- a/src/slides/01_04.md
+++ b/src/slides/01_04.md
@@ -49,3 +49,11 @@ git push -f origin main
 Now the commit history at Github will be nice and clean. What happens in local, sometimes doesn't need to go to Github. Orphan branches are a pretty useful way to keep things clean.
 
 This is also a great way to reset things when playing with git and Github, but I do suggest you use a private repo for your experiments.
+
+```
+git checkout --orphan clean_branch
+git commit -am "Squeaky Clean History"
+git branch -D main
+git branch -m main
+git push -f origin main
+```
