--- a/src/slides/01_10.md
+++ b/src/slides/01_10.md
@@ -1,31 +1,62 @@
 ---
-title: Get an Accesibility Report
+title: Using Secrets
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Run Lighthouse Audit on Push
+# Using Hidden Secrets in Projects
 
-One of the cool thing that Github actions can do is run linux commands as if you were typing them from the terminal. We can install npm scripts and generate audits and all types of reports including a Lighthouse audit. So how would your run something like that?
+> >
+
+When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
-This technique can help you anytime you want github to run some linux command on your site. Let's take a look at what I'm doing here by taking a look at the actions code.
+To store a secret in Github, you'll need to
 
-I'll start by giving my action a name, since you can run a number of actions that do different things.
+1. Go to your account
+1. Find a repository that you want to add a secret to
+1. Click on settings
+1. Choose secrets
 
-````yml
-name: Generate Lighthouse Report
-``
+Now, you can create a secret that will be stored by Github and accessible, but not viewable by anyone with access to this account.
+
+1. Click on New Repository Secret
+2. Give the Secret a Name
+3. Paste in the value of your secret.
+
+Before you click on the Add Secret button, make sure that this secret is stored somewhere else securely. You can use a password manager to store a secure note.
+
+You won't be able to retrieve this secret once you hit that green button.
+
+1. Hit the Add Secret button
+
+Your options after you add a secret are only to remove it or update it.
+
+You can use this secret with Github Actions as part of your build process.
+
+---
+
+# Walking through the code
+
+Let's take a look at the action that will take care of this:
+
+```yml
+name: Favorite Google Fonts
+```
+
+First, we start off by giving an action a name.
 
 ```yml
 on:
   push:
     branches: [main]
-````
+  pull_request:
+    branches: [main]
+```
 
-Next, I'll get to decide what triggers this action. You can trigger actions when someone pushes something to a branch, at a specific time or have it run manually on your command. Here, we'll just ask it to run when someone pushes a change to the master branch
+We can specify when this action runs, and we're choosing to trigger it when someone pushes to the main branch. I'm also showing you that you can run an action when a pull request to the main branch is approved.
 
 ```yml
 jobs:
@@ -33,98 +64,89 @@ jobs:
     runs-on: ubuntu-latest
 ```
 
-Now we can run a number of jobs, but first we need to specify which machine to run these jobs on. You can ask for a windows or a linux machine, or even have the job run on multiple machines.
+Next, we ask that this job run on an ubuntu server
+
+```
+    env:
+      google_api_key: ${{secrets.GOOGLE_API_KEY}}
+```
+
+Now we can make a reference to the secret we created earlier by using an environment variable that will get used by our script.
+
+```YML
+    steps:
+      - uses: actions/checkout@v2
+```
+
+Since we want to perform these actions with our repo, we want to use Githubs checkout action so we'll have access to those files.
 
 ```yml
-steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-node@v2
-    with:
-      node-version: '14'
+- name: Get the Font List
 ```
 
-Next, well have to specify the steps that we want this action to take. Before the get going with the specifics we can ask Github to use other actions that will give us access to our content. First is the checkout action. This one lets us work with the content from our repository.
-
-We want to execute some node.js commands, so we can use the setup-node. That's going to make it easier for us to use node.js with our application. We can even ask for a specific version of node. This is important if you want to use certain node.js features in your application.
-
-```yml
-- name: Get Report
-```
-
-It's nice to give the run a name because you can also run different tasks
-
-```yml
-run: |
-```
-
-Now we can use the `run` to execute specific tasks. This will let us ask Github to run these commands as if we were typing them into a terminal. By adding the pipe character at the begining we can run more than one task by putting each one on a separate line.
-
-```yml
-npm install -g lighthouse
-```
-
-The first command we want to run is to install lighthouse. Lighthouse is a node module that lets you run all types of tests and get a report from them
-
-```yml
-lighthouse https://raybo.org/githubchallenge/ --chrome-flags="--headless" --output="json" --output-path="./report.json"
-```
-
-This second command runs lighthouse with a number of options. This website is being published using Github Pages to the URL specified here. To do this you can go to `https://github.com/planetoftheweb/githubchallenge/settings/pages`, then turn on Github Pages and choose the docs folder. It will give us the URL to use here.
-
-We are running a number of options we can ask for when commands are run in the terminal. Let's go through them.
+jobs can be named since you can run more than one job in an action.
 
 ```
---chrome-flags="--headless"
+  run: |
 ```
 
-You can run lighthouse from the terminal on your own machine and by default, it will start your machine's browser and do the reporting there, but turning on this flag, we tell it not to do that since this is is running at Github and we don't have access to a browser.
+We can run our commands as if we were typing them from the terminal. If we ant to type in more than one command we can use the pipe character
 
 ```
---output="json"
+git config --global user.name "${GITHUB_ACTOR}"
+git config --global user.email "${INPUT_EMAIL}"
 ```
 
-By default the report will be generated in HTML, It would be hard to read that with the terminal, so I'm asking for it in one of the alternative formats, which is JSON.
+When you run github commands in this linux terminal, you're going to be running them as if this was a new machine and whenever you are running a new machine, you'll need to configure your user name and email.
+
+Github gives you a few environment variables you can use to set this up. I'm using the github_actor as well as input_email variables. You can get a list of all of the variables available at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
 
 ```
---output-path="./report.json"
+curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
 ```
 
-By default, lighthouse will generate a name for you, but if you want to specify your own name you can use this output path option.
+Now we can run the curl command in the terminal, which lets you pull up a website. The -s option means CURL will run silently since we just want the output of what this URL will give us. The URL option lets you specify the URL.
 
-```yml
-cat ./report.json
+We want to output the results of this command to a file, so we're using fontsList.json.
+
+```
+git add -A && git commit -m "Updated Fonts List"
+git push --set-upstream origin main
 ```
 
-Lighthouse generates a file for you, but doesn't display it. So the cat command lets you display the report in the actions.
+It's great that we've generated the report and created a file, but we want the file to be added to our repository. to do that we're going to need to add, commit and then push the files back to our repository.
 
 ---
 
 # Conclusion
 
-Now, this is a pretty large report and you'd probably want to configure it a bit more to make this useful, but it does show that you can use any node module you want and run all types of commands when someone pushes your site to Github.
+The ability to do something using Actions on Github and having that generate a file for us is pretty awesome. I'm sure you're already thinking about what else you can do with this technique.
 
 ---
 
 # Finished Code
 
 ```yml
-name: Generate Lighthouse Report
+name: Favorite Google Fonts
 
 on:
   push:
     branches: [main]
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      google_api_key: ${{secrets.GOOGLE_API_KEY}}
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Get Report
+
+      - name: Get the Font List
         run: |
-          npm install -g lighthouse
-          lighthouse https://raybo.org/githubchallenge/ --chrome-flags="--headless" --output="json" --output-path="./report.json"
-          cat ./report.json
+          git config --global user.name "${GITHUB_ACTOR}"
+          git config --global user.email "${INPUT_EMAIL}"
+          curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
+          git add -A && git commit -m "Updated Fonts List"
+          git push --set-upstream origin main
 ```
