--- a/src/slides/01_11.md
+++ b/src/slides/01_11.md
@@ -1,137 +1,70 @@
 ---
-title: Using Secrets
+title: Run a Scheduled Action
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Using Hidden Secrets in Projects
+# Running Actions on a Schedule
 
-> >
-
-When working with project, it's really important to be able to store certain ids, variables and special passwords securely. For this Challenge, I want you to store a secret using Github, and retrieve it using Github Actions.
+You've got a Github Action and you want to make sure it runs not just once or when the users push something to your repo, but everyday at 8:30am. How would you do that?
 
 I'll give you a couple of seconds to pause the video and see how you'd have solved it.
 
-To store a secret in Github, you'll need to
+---
 
-1. Go to your account
-1. Find a repository that you want to add a secret to
-1. Click on settings
-1. Choose secrets
+# Solution
 
-Now, you can create a secret that will be stored by Github and accessible, but not viewable by anyone with access to this account.
+For this example. I'm using the same action from the previous video, but you can use any action you want. The trick here is that we can run an action using a cron command.
 
-1. Click on New Repository Secret
-2. Give the Secret a Name
-3. Paste in the value of your secret.
+Because we're using that action and it does require a Secret, make sure you run this on a repository that has that secret stored in it if you want to use that same action.
 
-Before you click on the Add Secret button, make sure that this secret is stored somewhere else securely. You can use a password manager to store a secure note.
+I'm going to modify the `on` section of the action so that it uses cron to run at a specified time.
 
-You won't be able to retrieve this secret once you hit that green button.
+```
+on:
+  cron: '30 8 * * *'
+```
 
-1. Hit the Add Secret button
+A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
 
-Your options after you add a secret are only to remove it or update it.
-
-You can use this secret with Github Actions as part of your build process.
+┌───────── minute (0 - 59)
+│ ┌───────── hour (0 - 23)
+│ │ ┌───────── day of the month (1 - 31)
+│ │ │ ┌───────── month (1 - 12 or JAN-DEC)
+│ │ │ │ ┌───────── day of the week (0 - 6 or SUN-SAT)
 
 ---
 
-# Walking through the code
+---
 
-Let's take a look at the action that will take care of this:
+## Options
 
-```yml
-name: Favorite Google Fonts
-```
+`*` The wildcard value runs every instance. So if you want to run every day of the month you would use the wildcard value, otherwise, specify a number.
 
-First, we start off by giving an action a name.
+`,` A comma lets you run a command in more than one time slot. So if we wanted to run this on sunday and monday only, you could use 0,1 for the day of the week value.
 
-```yml
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-```
+`-` You can also use a range of values so that if you use 1-5 for the day of the week value, it would run Monday through Friday.
 
-We can specify when this action runs, and we're choosing to trigger it when someone pushes to the main branch. I'm also showing you that you can run an action when a pull request to the main branch is approved.
+`/` You can also step through a series of values. So if you wanted to run an action every five minutes. You could use 0/5 as the value for minute.
 
-```yml
-jobs:
-  build:
-    runs-on: ubuntu-latest
-```
+The maximum amount of time you can run something IS indeed every five minutes and remember that when running a lot of actions you might run into usage limits and increased pricing.
 
-Next, we ask that this job run on an ubuntu server
-
-```
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
-```
-
-Now we can make a reference to the secret we created earlier by using an environment variable that will get used by our script.
-
-```YML
-    steps:
-      - uses: actions/checkout@v2
-```
-
-Since we want to perform these actions with our repo, we want to use Githubs checkout action so we'll have access to those files.
-
-```yml
-- name: Get the Font List
-```
-
-jobs can be named since you can run more than one job in an action.
-
-```
-  run: |
-```
-
-We can run our commands as if we were typing them from the terminal. If we ant to type in more than one command we can use the pipe character
-
-```
-git config --global user.name "${GITHUB_ACTOR}"
-git config --global user.email "${INPUT_EMAIL}"
-```
-
-When you run github commands in this linux terminal, you're going to be running them as if this was a new machine and whenever you are running a new machine, you'll need to configure your user name and email.
-
-Github gives you a few environment variables you can use to set this up. I'm using the github_actor as well as input_email variables. You can get a list of all of the variables available at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
-
-```
-curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
-```
-
-Now we can run the curl command in the terminal, which lets you pull up a website. The -s option means CURL will run silently since we just want the output of what this URL will give us. The URL option lets you specify the URL.
-
-We want to output the results of this command to a file, so we're using fontsList.json.
-
-```
-git add -A && git commit -m "Updated Fonts List"
-git push --set-upstream origin main
-```
-
-It's great that we've generated the report and created a file, but we want the file to be added to our repository. to do that we're going to need to add, commit and then push the files back to our repository.
+If you want to play around with the timing before you submit an action, a great site to check is [Crontab Guru](https://crontab.guru/), which has an interactive tool and links to examples and tips you can use when running cron jobs.
 
 ---
 
 # Conclusion
 
-The ability to do something using Actions on Github and having that generate a file for us is pretty awesome. I'm sure you're already thinking about what else you can do with this technique.
+Crontab has been around for a long time. It's a great way to define repetitive task and actions that you want to perform. It's amazing that the simple five variable spec lets you define just about any deployment sequence you can think of.
 
----
+> >
 
-# Finished Code
-
-```yml
+```
 name: Favorite Google Fonts
 
 on:
-  push:
-    branches: [main]
+  cron: '30 8 * * *'
 
 jobs:
   build:
