--- a/src/slides/01_12.md
+++ b/src/slides/01_12.md
@@ -1,85 +1,93 @@
 ---
-title: Run a Scheduled Action
+title: Docker Container Actions
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Running Actions on a Schedule
+# Creating a Docker Container Action
 
-You've got a Github Action and you want to make sure it runs not just once or when the users push something to your repo, but everyday at 8:30am. How would you do that?
+Actions are great, but the syntax for running commands can be a bit limiting, plus they're a little hard to share. You can create actions more explicitly by using docker containers and then having it execute your shell scripts, but how would you do that?
 
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
+I'll give you a couple of seconds to pause the video and see how you'd have done something like this.
+
+You can take a look at an example of how to do this in my [Copy To Branches Action](https://github.com/planetoftheweb/copy-to-branches).
+
+It's job is to let you copy files from one branch to another. It actually has a ton of options, but instead of just running this as an action, you can create a more self contained project that can be added to the Github Marketplace and more easily shared with others.
 
 ---
 
-# Solution
+# Analyzing the Files
 
-For this example. I'm using the same action from the previous video, but you can use any action you want. The trick here is that we can run an action using a cron command.
+You can see that this repository is a pretty typical repo with a `README`, a `LICENSE` and a `.gitignore` file.
 
-Because we're using that action and it does require a Secret, make sure you run this on a repository that has that secret stored in it if you want to use that same action.
+Here's the rest of the files you'd need.
 
-I'm going to modify the `on` section of the action so that it uses cron to run at a specified time.
+`actions.yml`
+
+This is the main configuration file for your actions and determines how it will run. It looks a lot like a package.json file, but it is written in YAML, the same language we use to write github actions.
+
+The important thing in this document is that we're asking it to run our action using docker using an image called Dockerfile. Docker lets you run actions in their own virtual machines and you can be a lot more flexible about the features your machine uses.
+
+I'm also passing along some values here using Github Environment Variables so that I can use this in my bash script. If you are following these in order, you'll notice that I'm using the github.actor environment variable. You can get more information about them at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
+
+---
+
+# Dockerfile
 
 ```
-on:
-  cron: '30 8 * * *'
+FROM alpine:latest
 ```
 
-A cron command lets you use a special syntax that lets you specify a specific or a recurring date. It has five fields
+The dockerfile is a document that specifies the machine you want to use and how it will be configured. Notice that I'm using a type of machine called alpine. It is much faster than using Ubuntu Linux, which is what most people use when working with Actions.
 
-┌───────── minute (0 - 59)
-│ ┌───────── hour (0 - 23)
-│ │ ┌───────── day of the month (1 - 31)
-│ │ │ ┌───────── month (1 - 12 or JAN-DEC)
-│ │ │ │ ┌───────── day of the week (0 - 6 or SUN-SAT)
+```
+RUN apk --update add git
+RUN apk add --no-cache --upgrade bash
+```
+
+Docker machines are like baby machines, they dont' come with much installed, so we are using a utility called apk and adding git here so we can run some git commands on this action.
+
+We're also adding bash so we can use regular bash scripting here.
+
+```
+COPY entrypoint.sh /entrypoint.sh
+```
+
+We'll need to copy our entrypoint script file from this repository to this new machine so we can run it.
+
+```
+ENTRYPOINT ["/entrypoint.sh"]
+```
+
+Finally we specify that shell script as the entrypoint which runs after this machine is initialized.
+
+Now whenever this machine runs, it will run whatever shell script you have in the `entrypoint.sh` file.
 
 ---
 
+# Shell Script
+
+This script looks pretty complicated, but it's doing a lot of what we did when we ran the Secrets script.
+
+You can see that there's a section where we configure git with the email and password from our environment variables.
+
+Then we also receive environment variables that are options the user can specify.
+
+Finally we run our shell script.
+
+You can see that unlike the types of commands that we can run on regular github actions we have the full power of bash scripting available to us. We can run conditionals like if statements as well as loops.
+
+As with our secrets action, we can push all of our changes back to the repo when we're done.
+
 ---
 
-## Options
+# Publishing the Script
 
-`*` The wildcard value runs every instance. So if you want to run every day of the month you would use the wildcard value, otherwise, specify a number.
-
-`,` A comma lets you run a command in more than one time slot. So if we wanted to run this on sunday and monday only, you could use 0,1 for the day of the week value.
-
-`-` You can also use a range of values so that if you use 1-5 for the day of the week value, it would run Monday through Friday.
-
-`/` You can also step through a series of values. So if you wanted to run an action every five minutes. You could use 0/5 as the value for minute.
-
-The maximum amount of time you can run something IS indeed every five minutes and remember that when running a lot of actions you might run into usage limits and increased pricing.
-
-If you want to play around with the timing before you submit an action, a great site to check is [Crontab Guru](https://crontab.guru/), which has an interactive tool and links to examples and tips you can use when running cron jobs.
+To share this with others, you end up creating a release, which you can do once you've written your action by clicking here. That will give you an option of posting this action in the Github Marketplace and sharing it with the world or your team.
 
 ---
 
 # Conclusion
 
-Crontab has been around for a long time. It's a great way to define repetitive task and actions that you want to perform. It's amazing that the simple five variable spec lets you define just about any deployment sequence you can think of.
-
-> >
-
-```
-name: Favorite Google Fonts
-
-on:
-  cron: '30 8 * * *'
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    env:
-      google_api_key: ${{secrets.GOOGLE_API_KEY}}
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Get the Font List
-        run: |
-          git config --global user.name "${GITHUB_ACTOR}"
-          git config --global user.email "${INPUT_EMAIL}"
-          curl -s --url https://www.googleapis.com/webfonts/v1/webfonts?key=${{secrets.GOOGLE_API_KEY}} >> fontsList.json
-          git add -A && git commit -m "Updated Fonts List"
-          git push --set-upstream origin main
-```
+You can see that you can create much more powerful actions by using this docker method. It's a bit more work, but it's worth it since it's a real repository that can eb collaborated on and easily shared with others.
