--- a/src/slides/01_13.md
+++ b/src/slides/01_13.md
@@ -1,107 +1,93 @@
 ---
-title: Build and Deploy
+title: Docker Container Actions
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Building and Deploying your Sites
+# Creating a Docker Container Action
 
-The typical modern web project has different types of build processes for developing, testing and building applications. You can deploy static sites and Apps using Github, but how would you let Github help you run your processes and deploy sites on their servers?
+Actions are great, but the syntax for running commands can be a bit limiting, plus they're a little hard to share. You can create actions more explicitly by using docker containers and then having it execute your shell scripts, but how would you do that?
 
 I'll give you a couple of seconds to pause the video and see how you'd have done something like this.
 
+You can take a look at an example of how to do this in my [Copy To Branches Action](https://github.com/planetoftheweb/copy-to-branches).
+
+It's job is to let you copy files from one branch to another. It actually has a ton of options, but instead of just running this as an action, you can create a more self contained project that can be added to the Github Marketplace and more easily shared with others.
+
 ---
 
-# Solution
+# Analyzing the Files
 
-Alghough you could write your own Github Action using what you've learned so far, sometimes it pays to look through the Github Markeplace and find an action that does it for you.
+You can see that this repository is a pretty typical repo with a `README`, a `LICENSE` and a `.gitignore` file.
 
-My personal site, raybo.org uses an action from James Ives called github-pages-deploy-action that helps you take care of this. Let's take a look at our action code.
+Here's the rest of the files you'd need.
 
-```yaml
-name: Build and Deploy
-on: [push]
-```
+`actions.yml`
 
-We start off with giving the action a name and deciding how this action will be triggered. I have a simple push triggering this action, but you could switch it to activate on a pull request or manually.
+This is the main configuration file for your actions and determines how it will run. It looks a lot like a package.json file, but it is written in YAML, the same language we use to write github actions.
 
-```yaml
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-```
+The important thing in this document is that we're asking it to run our action using docker using an image called Dockerfile. Docker lets you run actions in their own virtual machines and you can be a lot more flexible about the features your machine uses.
 
-Next, we'll specify how this job will run. I'll let this run on ubuntu-latest since it will work well for this project.
+I'm also passing along some values here using Github Environment Variables so that I can use this in my bash script. If you are following these in order, you'll notice that I'm using the github.actor environment variable. You can get more information about them at [this URL](https://docs.github.com/en/actions/reference/environment-variables).
 
-```yaml
-steps:
-  - name: Checkout 🛎️
-    uses: actions/checkout@v2.3.1
-```
+---
 
-For our steps, I'm going to start by using the traditional checkout action from Github that will let us use our project.
-
-# Initialize and Build
+# Dockerfile
 
 ```
-      - name: Install and Build
-        run: |
-          npm install
-          npm run build
+FROM alpine:latest
 ```
 
-When this action gets going, it's like we're using a clean linux machine with our project inside it. We'll need to run the processes that will install all the dependencies and also build our application.
+The dockerfile is a document that specifies the machine you want to use and how it will be configured. Notice that I'm using a type of machine called alpine. It is much faster than using Ubuntu Linux, which is what most people use when working with Actions.
 
-The build process is an npm script that runs a series of commands for my site. It runs the project through Sass, the uses the Eleventy static site generator to create a folder called build with the final code that should be uploaded to a server for me.
-
-```yaml
-- name: Deploy 🚀
-  uses: JamesIves/github-pages-deploy-action@4.1.0
-  with:
-    branch: root # The branch the action should deploy to.
-    folder: build # The folder the action should deploy.
+```
+RUN apk --update add git
+RUN apk add --no-cache --upgrade bash
 ```
 
-Now we can use the action from the marketplace to deploy our site to Github Pages.
+Docker machines are like baby machines, they dont' come with much installed, so we are using a utility called apk and adding git here so we can run some git commands on this action.
 
-We're asking the action to generate a branch for us. I'm calling mine root, but it can be whatever you want it to be.
+We're also adding bash so we can use regular bash scripting here.
 
-This action will use our build folder to generate the site.
+```
+COPY entrypoint.sh /entrypoint.sh
+```
 
-If you look at my site, you'll notice that there is an extra branch called root that is generated by this process. This is what is on my build folder, but it is being output to a separate branch and Github Pages can be set up to deploy your site from that branch.
+We'll need to copy our entrypoint script file from this repository to this new machine so we can run it.
 
-If you look at my [Github Pages settings](https://github.com/planetoftheweb/planetoftheweb.github.io/settings/pages).
+```
+ENTRYPOINT ["/entrypoint.sh"]
+```
 
-you can see that we're using this root branch and the root folder of that branch to deploy our site.
+Finally we specify that shell script as the entrypoint which runs after this machine is initialized.
+
+Now whenever this machine runs, it will run whatever shell script you have in the `entrypoint.sh` file.
+
+---
+
+# Shell Script
+
+This script looks pretty complicated, but it's doing a lot of what we did when we ran the Secrets script.
+
+You can see that there's a section where we configure git with the email and password from our environment variables.
+
+Then we also receive environment variables that are options the user can specify.
+
+Finally we run our shell script.
+
+You can see that unlike the types of commands that we can run on regular github actions we have the full power of bash scripting available to us. We can run conditionals like if statements as well as loops.
+
+As with our secrets action, we can push all of our changes back to the repo when we're done.
+
+---
+
+# Publishing the Script
+
+To share this with others, you end up creating a release, which you can do once you've written your action by clicking here. That will give you an option of posting this action in the Github Marketplace and sharing it with the world or your team.
 
 ---
 
 # Conclusion
 
-Depoying static sites like this is easy and it generates a separate branch for your deploys. Normally, I might do this by deploying to a docs folder in the root or a github pages branch, but this action makes the whole process much easier. Make sure you explore the Github Marketplace for lots of other cool pre-built actions.
-
----
-
-# Finished Code
-
-```yaml
-name: Build and Deploy
-on: [push]
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v2.3.1
-
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-        run: |
-          npm install
-          npm run build
-      - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@4.1.0
-        with:
-          branch: root # The branch the action should deploy to.
-          folder: build # The folder the action should deploy.
-```
+You can see that you can create much more powerful actions by using this docker method. It's a bit more work, but it's worth it since it's a real repository that can eb collaborated on and easily shared with others.
