--- a/src/slides/01_09.md
+++ b/src/slides/01_09.md
@@ -1,130 +1,85 @@
 ---
-title: Get an Accesibility Report
+title: Processing All Branches
 slide: '<!-- .slide: data-visibility="hidden"-->'
 ---
 
 <!-- .slide: data-state="layout-title" class="bg-dark"-->
 
-# Run Lighthouse Audit on Push
-
-One of the cool thing that Github actions can do is run linux commands as if you were typing them from the terminal. We can install npm scripts and generate audits and all types of reports including a Lighthouse audit. So how would your run something like that?
-
-I'll give you a couple of seconds to pause the video and see how you'd have solved it.
-
-This technique can help you anytime you want github to run some linux command on your site. Let's take a look at what I'm doing here by taking a look at the actions code.
-
-I'll start by giving my action a name, since you can run a number of actions that do different things.
-
-````yml
-name: Generate Lighthouse Report
-``
-
-```yml
-on:
-  push:
-    branches: [main]
-````
-
-Next, I'll get to decide what triggers this action. You can trigger actions when someone pushes something to a branch, at a specific time or have it run manually on your command. Here, we'll just ask it to run when someone pushes a change to the master branch
-
-```yml
-jobs:
-  build:
-    runs-on: ubuntu-latest
-```
-
-Now we can run a number of jobs, but first we need to specify which machine to run these jobs on. You can ask for a windows or a linux machine, or even have the job run on multiple machines.
-
-```yml
-steps:
-  - uses: actions/checkout@v2
-  - uses: actions/setup-node@v2
-    with:
-      node-version: '14'
-```
-
-Next, well have to specify the steps that we want this action to take. Before the get going with the specifics we can ask Github to use other actions that will give us access to our content. First is the checkout action. This one lets us work with the content from our repository.
-
-We want to execute some node.js commands, so we can use the setup-node. That's going to make it easier for us to use node.js with our application. We can even ask for a specific version of node. This is important if you want to use certain node.js features in your application.
-
-```yml
-- name: Get Report
-```
-
-It's nice to give the run a name because you can also run different tasks
-
-```yml
-run: |
-```
-
-Now we can use the `run` to execute specific tasks. This will let us ask Github to run these commands as if we were typing them into a terminal. By adding the pipe character at the begining we can run more than one task by putting each one on a separate line.
-
-```yml
-npm install -g lighthouse
-```
-
-The first command we want to run is to install lighthouse. Lighthouse is a node module that lets you run all types of tests and get a report from them
-
-```yml
-lighthouse https://raybo.org/githubchallenge/ --chrome-flags="--headless" --output="json" --output-path="./report.json"
-```
-
-This second command runs lighthouse with a number of options. This website is being published using Github Pages to the URL specified here. To do this you can go to `https://github.com/planetoftheweb/githubchallenge/settings/pages`, then turn on Github Pages and choose the docs folder. It will give us the URL to use here.
-
-We are running a number of options we can ask for when commands are run in the terminal. Let's go through them.
-
-```
---chrome-flags="--headless"
-```
-
-You can run lighthouse from the terminal on your own machine and by default, it will start your machine's browser and do the reporting there, but turning on this flag, we tell it not to do that since this is is running at Github and we don't have access to a browser.
-
-```
---output="json"
-```
-
-By default the report will be generated in HTML, It would be hard to read that with the terminal, so I'm asking for it in one of the alternative formats, which is JSON.
-
-```
---output-path="./report.json"
-```
-
-By default, lighthouse will generate a name for you, but if you want to specify your own name you can use this output path option.
-
-```yml
-cat ./report.json
-```
-
-Lighthouse generates a file for you, but doesn't display it. So the cat command lets you display the report in the actions.
-
 ---
+
+# Automating Tasks
+
+Using bash was a lot of fun, so let's do another one. This time, I want you to try to go through every branch of a repo...no matter how many branches there are and then copy a certain folder in each branch of the repo, to another folder on your desktop. Each branch should go in it's own folder.
+
+I'll give you a couple of minutes to figure out how you'd do something like this.
+
+# Solution
+
+This one's a bit tougher, but it's a lot less code because you have to figure out a way to get the list of files.
+
+```bash
+# !/bin/bash
+```
+
+We start up like in any bash scrip with the location of the the bash compiler.
+
+```bash
+for BRANCH in `git branch --list|sed 's/*//g'`;
+```
+
+Now we're going to loop through every branch in the current repo. How do we do that?
+
+What we need in a loop like for is an array, and remember that in the last video we saw that the arrayws are separated by whitespace. Also, remember that all bash is doing is issue the commands you would if you went to the terminal and typed them in.
+
+So lets try the git branch command with the list option.
+
+```bash
+git branch --list
+```
+
+We get a list of all the branches that's almost perfect except for the. Now, in the terminal a pipe character | allows you to filter one command by another. By using it here we're providing a regular expression with the filter, which removes the extra asterisk in the list's current output.
+
+```bash
+git branch --list|sed 's/*//g'
+```
+
+Now that it makes sense we can do the do and done commands and do whatever we want to do to each branch. So we start by checking out each branch.
+
+```bash
+git checkout $BRANCH
+```
+
+Now we can create a directory for our branches. We'll use the -p option so that the computer creates it if it doesn't currently exist.
+
+```bash
+mkdir -p ~/Desktop/backup/$BRANCH
+```
+
+and finally copy the files there. We're using the cp command and the recursive option and it will copy everything to our folder with the name of our branch.
+
+```bash
+cp -R builds/* ~/Desktop/backups/$BRANCH/
+```
+
+I've got this all set up just like the previous code challenge so you can see it in action.
+
+There are three branches and the bash script is stored in my home directory. We're inside our project folder and will execute the command.
+
+```bash
+sh ~/git-backup.sh
+```
 
 # Conclusion
 
-Now, this is a pretty large report and you'd probably want to configure it a bit more to make this useful, but it does show that you can use any node module you want and run all types of commands when someone pushes your site to Github.
+I've got several bash scripts that automate different parts of my Github process. They're a great way to take care of repetitive task and can do anything.
 
----
+```bash
+# !/bin/bash
 
-# Finished Code
-
-```yml
-name: Generate Lighthouse Report
-
-on:
-  push:
-    branches: [main]
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
-      - name: Get Report
-        run: |
-          npm install -g lighthouse
-          lighthouse https://raybo.org/githubchallenge/ --chrome-flags="--headless" --output="json" --output-path="./report.json"
-          cat ./report.json
+for BRANCH in `git branch --list|sed 's/\*//g'`;
+	do
+	  git checkout $BRANCH
+	  mkdir -p ~/Desktop/backup/$BRANCH
+	  cp -R build/* ~/Desktop/backup/$BRANCH/
+	done
 ```
